@@ -76,30 +76,30 @@ class BidirectionalTraversalMatcher(steps: ExpanderStep,
     result.asScala
   }
 
-
-  def atLeastOne(i: Int): Int = if (i < 1) 1 else i
-
+  def atLeastOne(i: Int): Int = if (i < 1) {
+    1
+  } else {
+    i
+  }
 
   class StepCollisionDetector extends StandardBranchCollisionDetector(null) with BranchCollisionPolicy {
     override def includePath(path: Path, startPath: TraversalBranch, endPath: TraversalBranch): Boolean = {
       val s = startPath.state().asInstanceOf[Option[ExpanderStep]]
       val e = endPath.state().asInstanceOf[Option[ExpanderStep]]
 
+      def doBranchesMatch(startStep:ExpanderStep, endStep:ExpanderStep):(Boolean,Boolean)={
+        val foundEnd = endStep.id + 1 == startStep.id
+        val includeButDoNotPrune = endStep.id == startStep.id && endStep.shouldInclude() || startStep.shouldInclude()
+        (foundEnd || includeButDoNotPrune, foundEnd)
+      }
+
+      def atEndOf(branch: TraversalBranch): (Boolean, Boolean) = (branch.length() == 0, true)
+
       val (include, prune) = (s, e) match {
-        case (Some(startStep), Some(endStep)) =>
-          val foundEnd = endStep.id + 1 == startStep.id
-          val includeButDoNotPrune = endStep.id == startStep.id && endStep.shouldInclude() || startStep.shouldInclude()
-          (foundEnd || includeButDoNotPrune, foundEnd)
-
-        case (Some(x), None) =>
-          val result = startPath.length() == 0
-          (result, true)
-
-        case (None, Some(x)) =>
-          val result = endPath.length() == 0
-          (result, true)
-
-        case _ => throw new ThisShouldNotHappenError("Andres", "Unexpected traversal state encountered")
+        case (Some(startStep), Some(endStep)) => doBranchesMatch(startStep, endStep)
+        case (Some(_), None)                  => atEndOf(startPath)
+        case (None, Some(_))                  => atEndOf(endPath)
+        case _                                => (false, false)
       }
 
       if (prune) {
@@ -112,5 +112,4 @@ class BidirectionalTraversalMatcher(steps: ExpanderStep,
 
     def create(evaluator: Evaluator) = new StepCollisionDetector
   }
-
 }
